# python-bots

./: .env.example  .gitignore  DISCORD_BOTS_CHEATSHEET.md  DISCORD_PY_UPDATE.md  README.md  config.example.json  env.example  music.db  pyproject.toml  start-all-bots.sh  start_bots.py  troubleshoot_bots.sh
bots/clippy/: pyproject.toml
bots/clippy/src/clippy/: __init__.py  __main__.py  bot.py  config.py  logging.py  quotes.py
bots/clippy/src/clippy_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bots/mtg-card-bot/: pyproject.toml
bots/mtg-card-bot/src/mtg_card_bot/: __init__.py  __main__.py  bot.py  cache.py  config.py  errors.py  logging.py  scryfall.py
bots/mtg-card-bot/src/mtg_card_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bots/music/: pyproject.toml
bots/music/src/music/: __init__.py  __main__.py  audio.py  bot.py  config.py  errors.py  extractor.py  logging.py  models.py  queue.py
shared_lib/: pyproject.toml
shared_lib/src/shared/: __init__.py  config.py  database.py  discord_utils.py  errors.py  logging.py  security.py
