[project]
name = "python-bots"
version = "2.0.0"
description = "Modern Discord bot monorepo written in Python"
authors = [
    {name = "Sawyer", email = "sawyer@example.com"},
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.12.9",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.9",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "discord-py",
]

[tool.uv.workspace]
members = ["bots/*"]

[tool.uv.sources]
discord-py = { path = "discord.py" }

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP", "ANN", "S", "C4", "T20"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "discord.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
