[project]
name = "clippy-bot"
version = "4.0.0"
description = "An unhinged Discord bot inspired by Microsoft Office's Clippy"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.5.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "structlog>=25.4.0",
    "aiosqlite>=0.21.0",
    "shared",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.9",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
shared = { workspace = true }

[tool.uv.scripts]
run = "python -m clippy"
dev = "python -m clippy --debug"
format = "ruff format src/"
lint = "ruff check src/"
typecheck = "mypy src/"
test = "pytest tests/"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T10", "ISC", "ICN", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "FURB", "LOG", "RUF"]
ignore = ["ANN101", "ANN102", "COM812", "ISC001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true